phase 7,8
Phase 7 (curated packs): pack loader + ai-curated-{catalog,commerce,support} modules; Real_Apps/chat-capabilities-demo now uses ai.curated.pack: catalog (application.yml (line 15)).
Phase 8 (intent metadata → retrieval hints): the orchestrator now supports intentResponse.metadata.retrievalQueryHint and appends it to the retrieval query only when it’s safe and there is exactly one retrieval intent; it sets retrievalQueryHintApplied in the RAG request metadata (IntentHandlingStep.java (line 1136)). Covered by IntentHandlingStepRetrievalQueryHintTest.java (line 1).